Fix our people listing modals not showing properly
There was a needed animation from the animations stylesheet that was removed recently

--- a/version_control/Codurance_September2020/css/modules/our-people-listing.css
+++ b/version_control/Codurance_September2020/css/modules/our-people-listing.css
@@ -62,6 +62,20 @@
 }
 
 /* Our People Listing */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+}
+
 .custom-our-people {
   margin: 0 auto;
   margin-top: 2em;
